<?xml version="1.0" encoding="utf-8"?>
<!-- Menu items for navigation drawer -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_font_download_black_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_fitbit"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/fitbit" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help"/>
    </group>
</menu>