<?xml version="1.0" encoding="utf-8"?>
<!-- Adapted from https://developer.android.com/training/implementing-navigation/nav-drawer by Google -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>

        <!-- date heading -->
        <TextView
            android:id="@+id/tv_current_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/toolbar"
            android:textSize="28dp"
            android:text="@string/month_heading_this_month"/>

        <include layout="@layout/btn_prev"/>

        <include layout="@layout/btn_next"/>

        <!-- Use layout_below and _above so chart fills remaining space. From
        https://stackoverflow.com/questions/5880513/how-to-make-a-linearlayout-filling-remaining-space-in-a-relativelayout
        by Alexandru Cristescu -->
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_above="@id/tv_current_wgt_value"
            android:layout_below="@id/tv_current_heading"/>

        <!-- current weight UI elements -->
        <TextView
            android:id="@+id/tv_current_wgt_text"
            android:layout_alignBaseline="@id/tv_current_wgt_value"
            android:layout_alignParentLeft="true"
            android:text="@string/current_weight"
            style="@style/TrackWeightText"/>

        <TextView
            android:id="@+id/tv_current_wgt_value"
            android:layout_above="@id/et_new_wgt_value"
            android:layout_toLeftOf="@id/tv_current_wgt_unit"
            style="@style/TrackWeightText"/>

        <TextView
            android:id="@+id/tv_current_wgt_unit"
            android:layout_alignBaseline="@id/tv_current_wgt_value"
            android:layout_toRightOf="@id/et_new_wgt_value"
            android:text="@string/weight_kg"
            style="@style/TrackWeightText" />

        <!-- new weight UI elements -->
        <TextView
            android:id="@+id/tv_new_wgt_text"
            android:layout_alignBaseline="@id/et_new_wgt_value"
            android:layout_alignParentLeft="true"
            android:text="@string/new_weight"
            style="@style/TrackWeightText" />

        <EditText
            android:id="@+id/et_new_wgt_value"
            android:layout_toLeftOf="@id/tv_goal_wgt_unit"
            android:layout_above="@id/btn_goal_wgt"
            android:inputType="numberDecimal"
            style="@style/TrackWeightText" />

        <TextView
            android:id="@+id/tv_new_wgt_unit"
            android:layout_alignBaseline="@id/et_new_wgt_value"
            android:layout_toLeftOf="@id/btn_new_wgt"
            android:text="@string/weight_kg"
            style="@style/TrackWeightText" />

        <Button
            android:id="@+id/btn_new_wgt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/et_new_wgt_value"
            android:layout_alignParentRight="true"
            android:text="@string/update"
            style="@style/PrimaryColourButton"/>

        <!-- goal weight UI elements -->
        <TextView
            android:id="@+id/tv_goal_wgt_text"
            android:layout_alignBaseline="@id/et_goal_wgt_value"
            android:layout_alignParentLeft="true"
            android:text="@string/goal_weight"
            style="@style/TrackWeightText" />

        <EditText
            android:id="@+id/et_goal_wgt_value"
            android:layout_toLeftOf="@id/tv_goal_wgt_unit"
            android:layout_alignParentBottom="true"
            android:inputType="number"
            style="@style/TrackWeightText" />

        <TextView
            android:id="@+id/tv_goal_wgt_unit"
            android:layout_alignBaseline="@id/et_goal_wgt_value"
            android:layout_toLeftOf="@id/btn_goal_wgt"
            android:text="@string/weight_kg"
            style="@style/TrackWeightText" />

        <Button
            android:id="@+id/btn_goal_wgt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignBaseline="@id/et_goal_wgt_value"
            android:layout_alignParentRight="true"
            android:text="@string/update"
            style="@style/PrimaryColourButton"/>

    </RelativeLayout>

    <include layout="@layout/nav_view"/>

</android.support.v4.widget.DrawerLayout>