<?xml version="1.0" encoding="utf-8"?>
<!-- Adapted from https://developer.android.com/training/implementing-navigation/nav-drawer by Google -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <include layout="@layout/toolbar"/>

        <!-- headings -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_weight="0"
            android:textSize="28dp"
            android:text="@string/main_heading" />

        <TextView
            android:id="@+id/tv_last_updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp" />


        <!-- activity summary -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:weightSum="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_non_sed"
                    style="@style/HomepageActivityButton"/>

                <Button
                    android:id="@+id/btn_cal_burn"
                    style="@style/HomepageActivityButton"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_active_time"
                    style="@style/HomepageActivityButton"/>

                <Button
                    android:id="@+id/btn_strength_ex"
                    style="@style/HomepageActivityButton"/>
            </TableRow>

        </TableLayout>

        <!-- bottom buttons -->
        <Button
            android:id="@+id/btn_goals"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:text="@string/update_goals"
            style="@style/PrimaryColourButton"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginBottom="8dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_symptoms"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/track_symptoms"
                style="@style/PrimaryColourButton"/>

            <Button
                android:id="@+id/btn_weight"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/track_weight"
                style="@style/PrimaryColourButton"/>

        </LinearLayout>


    </LinearLayout>

    <include layout="@layout/nav_view"/>

</android.support.v4.widget.DrawerLayout>