<?xml version="1.0" encoding="utf-8"?>
<!-- Adapted from https://developer.android.com/training/implementing-navigation/nav-drawer by Google -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>

        <!-- date heading -->
        <TextView
            android:id="@+id/tv_current_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/toolbar"
            android:textSize="28dp"
            android:text="@string/week_heading_this_week"/>

        <include layout="@layout/btn_prev"/>

        <include layout="@layout/btn_next"/>

        <!-- Use layout_below and _above so chart fills remaining space. From
        https://stackoverflow.com/questions/5880513/how-to-make-a-linearlayout-filling-remaining-space-in-a-relativelayout
        by Alexandru Cristescu -->
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/tv_current_heading"
            android:layout_above="@id/tv_pain_heading"/>

        <!-- pain rating UI elements -->
        <TextView
            android:id="@+id/tv_pain_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/ll_set_pain"
            android:textSize="18dp"
            android:text="@string/rate_pain"/>

        <LinearLayout
            android:id="@+id/ll_set_pain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@id/tv_function_heading"
            android:gravity="center_vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0">

                <TextView
                    android:id="@+id/tv_pain_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/symptoms_set"/>

                <Switch
                    android:id="@+id/sw_pain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <SeekBar
                android:id="@+id/sb_pain_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_pain_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_weight="0"
                android:textSize="20dp"/>
        </LinearLayout>

        <!-- function rating UI elements -->
        <TextView
            android:id="@+id/tv_function_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/ll_set_function"
            android:textSize="18dp"
            android:text="@string/rate_function"/>

        <LinearLayout
            android:id="@+id/ll_set_function"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0">

                <TextView
                    android:id="@+id/tv_function_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/symptoms_set"/>

                <Switch
                    android:id="@+id/sw_function"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <SeekBar
                android:id="@+id/sb_function_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_function_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_weight="0"
                android:textSize="20dp"/>
        </LinearLayout>


    </RelativeLayout>

    <include layout="@layout/nav_view"/>

</android.support.v4.widget.DrawerLayout>